kubernetes/config-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enset-ebank-config-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enset-ebank-config-service
  template:
    metadata:
      labels:
        app: enset-ebank-config-service
    spec:
      containers:
        - name: enset-ebank-config-service
          image: enset-ebank-config-service
          ports:
            - containerPort: 9999
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9999/actuator/health
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: enset-ebank-config-service
spec:
  selector:
    app: enset-ebank-config-service
  ports:
    - protocol: TCP
      port: 9999 # Port du service exposé sur le cluster Kubernetes
      targetPort: 9999 # Port sur lequel votre service d'authentification écoute dans le pod
