kubernetes/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enset-ebank-account-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enset-ebank-account-service
  template:
    metadata:
      labels:
        app: enset-ebank-account-service
    spec:
      containers:
        - name: enset-ebank-account-service
          image: enset-ebank-account-service
          ports:
            - containerPort: 8082
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: enset-ebank-account-service
spec:
  selector:
    app: enset-ebank-account-service
  ports:
    - protocol: TCP
      port: 8082 # Port du service exposé sur le cluster Kubernetes
      targetPort: 8082 # Port sur lequel votre service d'authentification écoute dans le pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enset-ebank-account-service
spec:
  defaultBackend:
    service:
      name: enset-ebank-account-service
      port:
        number: 8082
